Finish Profile page header
- Created profile header component
- Created Circle Avatar component
- Created Custom Divider component
- Added line-clamp dependecy
- Added custom line-clamps
- Modified tailwind config for different screen sizes
- Modified next config to allow images from images.unsplash.com

--- a/jfarms/app/src/styles/globals.css
+++ b/jfarms/app/src/styles/globals.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+
+    .line-clamp-10 {
+        display: -webkit-box;
+        -webkit-line-clamp: 10;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
+    .line-clamp-15 {
+        display: -webkit-box;
+        -webkit-line-clamp: 15;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+    
+    
+}
